--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
-<!doctype html>
-
-<html lang="es">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MUEBLES </title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
+    <title>WWW.ARTMAKEMYMUEBLES.CL</title>
+    <style type="text/css">
+        a img{
+            width: 25%;
+        }
+    </style>
 </head>
-<h1> COTIZA TU PROYECTO</h1>
-
 <body>
-jolsdffgsdfgsdfgdfsgnsdfhsdffg
+<h1 style="text-align: center">ARTMAKEMYMUEBLES</h1>
+<div id="instafeed-container"></div>
+
+
+
+<script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
+<script type="text/javascript">
+    var userFeed = new Instafeed({
+        get: 'user',
+        target: "instafeed-container",
+        resolution: 'low_resolution',
+        accessToken: 'YOUR_INSTAGRAM_ACCESS_TOKEN_GOES_HERE'
+    });
+    userFeed.run();
+</script>
 </body>
-
 </html>
-
-
